--- a/src/main/webapp/Admin.html
+++ b/src/main/webapp/Admin.html
@@ -8,45 +8,10 @@
 <link rel="stylesheet"
 	href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css	">
 <script src="admin.js"></script>
-<style>
-.header-button {
-	color: #fff;
-	border-style: groove;
-	background: #007bff;
-	border-color: #007bff;
-	border-radius: 10px;
-	padding: 10px;
-}
-
-.secondary-block {
-	padding: 10px;
-	background: aliceblue;
-	border-style: groove;
-	border-radius: 10px;
-}
-
-.main-div {
-	padding-top: 4%;
-	margin: 5%;
-	margin-left: 10%;
-	margin-right: 10%;
-	border-style: groove;
-	padding-bottom: 7%;
-	border-radius: 50px;
-}
-
-.main-header{
-    text-align: center;
-    padding-bottom: 15px;
-}
-img {
-	height: 284px;
-	width: 100%;
-}
-</style>
+<link rel="stylesheet" href="main.css">
 </head>
-<body style="background: radial-gradient(black, transparent);">
-	<div class="main-div" style="background: white;">
+<body class="main-body">
+	<div class="main-div div-body">
 		<div class="main-header">
 			<h3>Manager</h3>
 		</div>
