--- a/src/main/webapp/Admin.html
+++ b/src/main/webapp/Admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Admin</title>
+<title>Manager</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet"
@@ -11,6 +11,9 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body class="main-body">
+	<nav class="navbar navbar-dark bg-dark">
+		<span class="navbar-brand mb-0 h1">Terizon Reimbursement System</span>
+	</nav>
 	<div class="main-div div-body">
 		<div class="main-header">
 			<h3>Manager</h3>
@@ -19,6 +22,7 @@
 			<div class="header-button" onClick="clickPersonalInfo()">Personal
 				Information</div>
 			<div id="employeeInfo"></div>
+			<div id="updateInfo"></div>
 		</div>
 		<div class="container">
 			<div class="header-button" onClick="clickReimbursementHeader()">Reimbursement
