--- a/src/main/webapp/Employee.html
+++ b/src/main/webapp/Employee.html
@@ -11,6 +11,9 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body class="main-body">
+	<nav class="navbar navbar-dark bg-dark">
+		<span class="navbar-brand mb-0 h1">Terizon Reimbursement System</span>
+	</nav>
 	<div class="main-div div-body">
 		<div class="main-header">
 			<h3>Employee</h3>
