--- a/src/main/webapp/default.html
+++ b/src/main/webapp/default.html
@@ -5,32 +5,35 @@
 <title>LogIn</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div style="margin-left: 45%; margin-top: 5%;">
-		<h1>Log In</h1>
+	<div class="brand-login">
+		<h1>Terizon</h1>
+		<h3>Reimbursement System</h3>
 		<br />
 	</div>
-	<div style="border-style: groove; border-radius: 10px; padding: 10px; background: aliceblue; width: 30%; margin-left: 34%;">
-		<form action="LogInServlet" method="POST"
-			style="margin: 10px; padding-left: 15%;">
+	<div class="login-container">
+		<div class="inner-login-container">
 			<table>
-			<tr>
-			<td><label>Username:</label></td>
-			<td><input type="text" name="userName" size="20" required /></td>
-			</tr>
-			<tr>
-			<td>
-			<label>Password:</label></td>
-			<td>
-			<input type="password" name="password" size="20" required /> </td>
-			</tr>
+				<tr>
+					<td><label>Username:</label></td>
+					<td><input type="text" name="userName" id="userName" size="20"
+						required /></td>
+				</tr>
+				<tr>
+					<td><label>Password:</label></td>
+					<td><input type="password" name="password" id="password"
+						size="20" required /></td>
+				</tr>
 			</table>
-			<input class="btn btn-info" style="margin: 10px;width: 74%;" type="submit" value="Log In" />
-		</form>
+			<button class="btn btn-info login-button" onClick="logInAjax()" >Log In</button>
+		</div>
 	</div>
 	<div id="jobName"></div>
+	<script src="login.js"></script>
 </body>
 </html>
